--- a/index.html
+++ b/index.html
@@ -18,7 +18,6 @@
                 <img src="./img/sony_logo.svg" alt="">
             </div>
         </div>
-        
         <!-- navbar -->
         <nav class="navbar navabar-stile navbar-expand-lg navbar-light bg-white">
             <div class="container-fluid">
@@ -105,7 +104,10 @@
                 </form>
               </div>
             </div>
-          </nav>
+        </nav>
+        <!-- script -->
+        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
+
 
     </header>
     <!-- HERO -->
