add layout hero

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 </head>
 <body>
     <!-- HEADER -->
-    <header class="main-header">
+    <header class="main-header fixed-top">
         <!-- logo -->
         <div class="logo-container bg-black d-flex justify-content-end">
             <div class="logo">
@@ -111,7 +111,25 @@
 
     </header>
     <!-- HERO -->
-
+    <section class="hero d-flex align-items-end pb-3">
+        <div class="container">
+            <div class="row">
+                <div class="col-12 col-lg-10 container-returnal">
+                    <img  class="pd-r" src="./img/returnal-hero-banner-logo.png" alt="">
+                </div>
+            </div>
+            <!-- text -->
+            <div class="row text-white">
+                <div class="col-8">
+                    <h1>Rompi il cerchio</h1>
+                </div>
+                <div class="col-8">
+                    <span>
+                        Rialzati dopo ogni sconfitta e affronta una nuova sfida con ogni rinascita in uqesto esplosivo thriller fantascentifico disponibile in esclusiva su PS5.
+                    </span>
+                </div>
+        </div>
+    </section>
     <!-- MAIN -->
 
     <!-- FOOTER -->
