add layout box-img

--- a/index.html
+++ b/index.html
@@ -111,27 +111,70 @@
 
     </header>
     <!-- HERO -->
-    <section class="hero d-flex align-items-end pb-3">
+    <section class="hero d-flex align-items-end pb-4">
         <div class="container">
             <div class="row">
-                <div class="col-12 col-lg-10 container-returnal">
+                <div class="col-10 col-md-8 col-lg-5 container-returnal">
                     <img  class="pd-r" src="./img/returnal-hero-banner-logo.png" alt="">
                 </div>
             </div>
             <!-- text -->
-            <div class="row text-white">
-                <div class="col-8">
-                    <h1>Rompi il cerchio</h1>
-                </div>
-                <div class="col-8">
-                    <span>
+            <ul class="row text-white p-0">
+                <li class="col-12">
+                    <h1 class="title">Rompi il cerchio</h1>
+                </li>
+                <li class="col-12 col-lg-5">
+                    <p>
                         Rialzati dopo ogni sconfitta e affronta una nuova sfida con ogni rinascita in uqesto esplosivo thriller fantascentifico disponibile in esclusiva su PS5.
-                    </span>
-                </div>
-        </div>
+                    </p>
+                </li>
+                <li class="col-12">
+                    <button class="btn btn-stile btn-danger">
+                        Acquista ora
+                    </button>
+                </li>
+            </ul>
     </section>
     <!-- MAIN -->
-
+    <main>
+        <!-- img -->
+        <section class="games-section mt-2 mb-3">
+            <div class="container">
+                <div class="row">
+                    <div class="col-6 col-md-4 col-lg-2 pt-4">
+                        <div class="box bg-secondary">
+                            hello
+                        </div>
+                    </div>
+                    <div class="col-6 col-md-4 col-lg-2 pt-4">
+                        <div class="box bg-secondary">
+                            hello
+                        </div>
+                    </div>
+                    <div class="col-6 col-md-4 col-lg-2 pt-4 ">
+                        <div class="box bg-secondary">
+                            hello
+                        </div>
+                    </div>
+                    <div class="col-6 col-md-4 col-lg-2 pt-4">
+                        <div class="box bg-secondary">
+                            hello
+                        </div>
+                    </div>
+                    <div class="col-6 col-md-4 col-lg-2 pt-4">
+                        <div class="box bg-secondary">
+                            hello
+                        </div>
+                    </div>
+                    <div class="col-6 col-md-4 col-lg-2 pt-4 ">
+                        <div class="box bg-secondary">
+                            hello
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
+    </main>
     <!-- FOOTER -->
 </body>
 </html>
