add img games-section

--- a/index.html
+++ b/index.html
@@ -142,33 +142,33 @@
             <div class="container">
                 <div class="row">
                     <div class="col-6 col-md-4 col-lg-2 pt-4">
-                        <div class="box bg-secondary">
-                            hello
+                        <div class="box by">
+                            <img src="./img/returnal-listing-thumb-01-ps5.jpg" alt="">
                         </div>
                     </div>
                     <div class="col-6 col-md-4 col-lg-2 pt-4">
-                        <div class="box bg-secondary">
-                            hello
+                        <div class="box ">
+                            <img src="./img/ratchet-and-clank-rift-apart-keyart.jpg" alt="">
                         </div>
                     </div>
                     <div class="col-6 col-md-4 col-lg-2 pt-4 ">
-                        <div class="box bg-secondary">
-                            hello
+                        <div class="box ">
+                            <img src="./img/returnal-listing-thumb-01-ps5.jpg" alt="">
+                        </div>
+                    </div>
+                    <div class="col-6 col-md-4 col-xl-2 pt-4">
+                        <div class="box ">
+                            <img src="./img/ratchet-and-clank-rift-apart-keyart.jpg" alt="">
                         </div>
                     </div>
                     <div class="col-6 col-md-4 col-lg-2 pt-4">
-                        <div class="box bg-secondary">
-                            hello
-                        </div>
-                    </div>
-                    <div class="col-6 col-md-4 col-lg-2 pt-4">
-                        <div class="box bg-secondary">
-                            hello
+                        <div class="box">
+                            <img src="./img/returnal-listing-thumb-01-ps5.jpg" alt="">
                         </div>
                     </div>
                     <div class="col-6 col-md-4 col-lg-2 pt-4 ">
-                        <div class="box bg-secondary">
-                            hello
+                        <div class="box ">
+                            <img src="./img/ratchet-and-clank-rift-apart-keyart.jpg" alt="">
                         </div>
                     </div>
                 </div>
