add img info-section

--- a/index.html
+++ b/index.html
@@ -156,7 +156,7 @@
                             <img src="./img/returnal-listing-thumb-01-ps5.jpg" alt="">
                         </div>
                     </div>
-                    <div class="col-6 col-md-4 col-xl-2 pt-4">
+                    <div class="col-6 col-md-4 col-lg-2 pt-4">
                         <div class="box ">
                             <img src="./img/ratchet-and-clank-rift-apart-keyart.jpg" alt="">
                         </div>
@@ -173,6 +173,67 @@
                     </div>
                 </div>
             </div>
+        </section>
+
+        <!-- PS5 PRESENTAZIONE -->
+        <section class="PS5 mt-5">
+
+            <div class="container">
+                <div class="row">
+                <div class="col-12 text-center">
+                    <span class="cl-p fs-4">Play Has No Limits </span>
+                    <h1 class="title">Ecco la PlayStation 5</h1>
+                    <span class="text-secondary fs-4">Scopri nuove possibilità di gioco che non avresti mai immaginato</span>
+                </div>
+                </div>
+            </div>
+
+            <!-- ifo ps5-section -->
+            <div class="container ">
+                <div class="row">
+                    <div class="col-12 col-md-5 info-ps5 mt-5 align-self-center">
+                        <h1 class="title">Console PlayStation 5</h1>
+                        <span class="text-secondary fs-4">Sperimenta la nuova generazione di incredibili giochi PlayStation.</span>
+                    </div>
+                    <div class="col-12 col-md-6 info-ps5">
+                        <img src="./img/playstation-5-thumb.png" alt="">
+                    </div>
+                </div>
+            </div>
+            <div class="container">
+                <div class="row offset-lg-2">
+                    <div class="col-4 col-lg-2 ">
+                        <div class="box-ps5 pd-r">
+                            <img src="./img/playstation-5-thumb.png" alt="playstation">
+                        </div>
+                    </div>
+                    <div class="col-4 col-lg-2">
+                        <div class="box-ps5 pd-r">
+                            <img src="./img/joypad-thumb.png" 
+                            alt="joypad">
+                        </div>
+                    </div>
+                    <div class="col-4 col-lg-2">
+                        <div class="box-ps5 pd-r">
+                            <img src="./img/headset-thumb.png" 
+                            alt="headset">
+                        </div>
+                    </div>
+                    <div class="col-4 col-lg-2">
+                        <div class="box-ps5 pd-r">
+                            <img src="./img/remote-thumb.png" 
+                            alt="headset">
+                        </div>
+                    </div>
+                    <div class="col-4 col-lg-2">
+                        <div class="box-ps5 pd-r">
+                            <img src="./img/camera-thumb.jpg" 
+                            alt="webcam">
+                        </div>
+                    </div>
+                </div>
+            </div>
+
         </section>
     </main>
     <!-- FOOTER -->
