add hover border

--- a/index.html
+++ b/index.html
@@ -194,41 +194,61 @@
                     <div class="col-12 col-md-5 info-ps5 mt-5 align-self-center">
                         <h1 class="title">Console PlayStation 5</h1>
                         <span class="text-secondary fs-4">Sperimenta la nuova generazione di incredibili giochi PlayStation.</span>
+                        <button class="btn btn-stile  btn-primary d-block mt-3">
+                            Maggiori informazioni
+                        </button>
                     </div>
                     <div class="col-12 col-md-6 info-ps5">
                         <img src="./img/playstation-5-thumb.png" alt="">
                     </div>
                 </div>
             </div>
-            <div class="container">
-                <div class="row offset-lg-2">
+
+            <!-- gadegt -->
+            <div class="container mt-4">
+                <div class="row offset-lg-1">
                     <div class="col-4 col-lg-2 ">
                         <div class="box-ps5 pd-r">
-                            <img src="./img/playstation-5-thumb.png" alt="playstation">
+                            <div class="box-hover">
+                                <img src="./img/playstation-5-thumb.png" alt="playstation">
+                                <span class="d-none d-lg-block">Console PS5</span>
+                            </div>
                         </div>
                     </div>
-                    <div class="col-4 col-lg-2">
+                    <div class="col-4 col-lg-2 border-hover ">
                         <div class="box-ps5 pd-r">
-                            <img src="./img/joypad-thumb.png" 
-                            alt="joypad">
+                            <div class="box-hover">
+                                <img src="./img/joypad-thumb.png" 
+                                alt="joypad">
+                                <span class="d-none d-lg-block ">Controller wirless DualSense</span>
+                            </div>
                         </div>
                     </div>
-                    <div class="col-4 col-lg-2">
+                    <div class="col-4 col-lg-2 border-hover" >
                         <div class="box-ps5 pd-r">
-                            <img src="./img/headset-thumb.png" 
-                            alt="headset">
+                            <div class="box-hover">
+                                <img src="./img/headset-thumb.png" 
+                                alt="headset">
+                                <span class="d-none d-lg-block">Cuffie wireless con microfono PULSE 3D™</span>
+                            </div>
                         </div>
                     </div>
-                    <div class="col-4 col-lg-2">
+                    <div class="col-4 col-lg-2 border-hover">
                         <div class="box-ps5 pd-r">
-                            <img src="./img/remote-thumb.png" 
-                            alt="headset">
+                            <div class="box-hover">
+                                <img src="./img/remote-thumb.png" 
+                                alt="headset">
+                                <span class="d-none d-lg-block">Telecomando Media</span>
+                            </div>
                         </div>
                     </div>
-                    <div class="col-4 col-lg-2">
+                    <div class="col-4 col-lg-2 border-hover">
                         <div class="box-ps5 pd-r">
-                            <img src="./img/camera-thumb.jpg" 
-                            alt="webcam">
+                            <div class="box-hover">
+                                <img src="./img/camera-thumb.jpg" 
+                                alt="webcam">
+                                <span class="d-none d-lg-block">Telecamera span<span>
+                            </div>
                         </div>
                     </div>
                 </div>
