--- a/index.html
+++ b/index.html
@@ -189,7 +189,7 @@
             </div>
 
             <!-- ifo ps5-section -->
-            <div class="container ">
+            <div class="container">
                 <div class="row">
                     <div class="col-12 col-md-5 info-ps5 mt-5 align-self-center">
                         <h1 class="title">Console PlayStation 5</h1>
@@ -205,9 +205,9 @@
             </div>
 
             <!-- gadegt -->
-            <div class="container mt-4">
+            <div class="container mb-5">
                 <div class="row offset-lg-1">
-                    <div class="col-4 col-lg-2 ">
+                    <div class="col-4 col-lg-2">
                         <div class="box-ps5 pd-r">
                             <div class="box-hover">
                                 <img src="./img/playstation-5-thumb.png" alt="playstation">
@@ -254,6 +254,32 @@
                 </div>
             </div>
 
+        </section>
+
+        <!-- hero2 -->
+        <section class="hero2 d-flex align-items-end sm-t ">
+            <div class="container">
+                <div class="row">
+                    <div class="col-8 col-md-6 col-lg-4 container-takes">
+                        <img  class="pd-r" src="./img/it-takes-two-logo.png" alt="">
+                    </div>
+                </div>
+                <!-- text -->
+                <ul class="row text-white p-0">
+                    <li class="col-12">
+                        <h1 class="title">Un'avventura cooperativa selvaggia ti attende</h1>
+                    </li>
+                    <li class="col-12 col-lg-5">
+                        <p class="fs-4">
+                            Rialzati dopo ogni sconfitta e affronta una nuova sfida con ogni rinascita in uqesto esplosivo thriller fantascentifico disponibile in esclusiva su PS5.
+                        </p>
+                    </li>
+                    <li class="col-12">
+                        <button class="btn btn-stile btn-danger">
+                            Acquista ora
+                        </button>
+                    </li>
+                </ul>
         </section>
     </main>
     <!-- FOOTER -->
