--- a/index.html
+++ b/index.html
@@ -281,6 +281,99 @@
                     </li>
                 </ul>
         </section>
+
+        <!-- new-games -->
+        <section class="new-games  text-white">
+            <div class="container">
+                <h1 class="title pt-5 mb-2">Nuove uscite</h1>
+                <h4>Giochi incredibili per PS4 e PS5 disponibili ora</h4>
+
+                <div class="row">
+                    <div class="col-6 col-md-4 col-lg-2 pt-4">
+                        <div class="box-new-games by">
+                            <img src="./img/tony-hawks-pro-skater-1-2-store-art.jpg" alt="">
+                        </div>
+                        <span class="pt-3 fw-bold">Tony Hawk's Pro Skater 1 + 2</span>
+                    </div>
+
+                    <div class="col-6 col-md-4 col-lg-2 pt-4">
+                        <div class="box-new-games by">
+                            <img src="./img/crash-bandicoot-4-its-about-time-store-art.jpg" alt="">
+                        </div>
+                        <span class="pt-3  fw-bold">Crash Bandicoot4: it's About Time</span>
+                    </div>
+
+                    <div class="col-6 col-md-4 col-lg-2 pt-4">
+                        <div class="box-new-games by">
+                            <img src="./img/tony-hawks-pro-skater-1-2-store-art.jpg" alt="">
+                        </div>
+                        <span class="pt-3 fw-bold ">Tony Hawk's Pro Skater 1 + 2</span>
+                    </div>
+
+                    <div class="col-6 col-md-4 col-lg-2 pt-4">
+                        <div class="box-new-games by">
+                            <img src="./img/crash-bandicoot-4-its-about-time-store-art.jpg" alt="">
+                        </div>
+                        <span class="pt-3 fw-bold ">Crash Bandicoot4: it's About Time</span>
+                    </div>
+
+                    <div class="col-6 col-md-4 col-lg-2 pt-4">
+                        <div class="box-new-games by">
+                            <img src="./img/tony-hawks-pro-skater-1-2-store-art.jpg" alt="">
+                        </div>
+                        <span class="pt-3 fw-bold">Tony Hawk's Pro Skater 1 + 2</span>
+                    </div>
+
+                    <div class="col-6 col-md-4 col-lg-2 pt-4">
+                        <div class="box-new-games by">
+                            <img src="./img/crash-bandicoot-4-its-about-time-store-art.jpg" alt="">
+                        </div>
+                        <span class="pt-3  fw-bold">Crash Bandicoot4: it's About Time</span>
+                    </div>
+
+                    <div class="col-6 col-md-4 col-lg-2 pt-4">
+                        <div class="box-new-games by">
+                            <img src="./img/tony-hawks-pro-skater-1-2-store-art.jpg" alt="">
+                        </div>
+                        <span class="pt-3 fw-bold">Tony Hawk's Pro Skater 1 + 2</span>
+                    </div>
+
+                    <div class="col-6 col-md-4 col-lg-2 pt-4">
+                        <div class="box-new-games by">
+                            <img src="./img/crash-bandicoot-4-its-about-time-store-art.jpg" alt="">
+                        </div>
+                        <span class="pt-3  fw-bold">Crash Bandicoot4: it's About Time</span>
+                    </div>
+
+                    <div class="col-6 col-md-4 col-lg-2 pt-4">
+                        <div class="box-new-games by">
+                            <img src="./img/tony-hawks-pro-skater-1-2-store-art.jpg" alt="">
+                        </div>
+                        <span class="pt-3 fw-bold ">Tony Hawk's Pro Skater 1 + 2</span>
+                    </div>
+
+                    <div class="col-6 col-md-4 col-lg-2 pt-4">
+                        <div class="box-new-games by">
+                            <img src="./img/crash-bandicoot-4-its-about-time-store-art.jpg" alt="">
+                        </div>
+                        <span class="pt-3 fw-bold ">Crash Bandicoot4: it's About Time</span>
+                    </div>
+
+                    <div class="col-6 col-md-4 col-lg-2 pt-4">
+                        <div class="box-new-games by">
+                            <img src="./img/tony-hawks-pro-skater-1-2-store-art.jpg" alt="">
+                        </div>
+                        <span class="pt-3 fw-bold ">Tony Hawk's Pro Skater 1 + 2</span>
+                    </div>
+
+                    <div class="col-6 col-md-4 col-lg-2 pt-4">
+                        <div class="box-new-games by">
+                            <img src="./img/crash-bandicoot-4-its-about-time-store-art.jpg" alt="">
+                        </div>
+                        <span class="pt-3  fw-bold">Crash Bandicoot4: it's About Time</span>
+                    </div>
+            </div>
+        </section>
     </main>
     <!-- FOOTER -->
 </body>
