--- a/index.html
+++ b/index.html
@@ -110,6 +110,7 @@
 
 
     </header>
+
     <!-- HERO -->
     <section class="hero d-flex align-items-end pb-4">
         <div class="container">
@@ -135,6 +136,7 @@
                 </li>
             </ul>
     </section>
+
     <!-- MAIN -->
     <main>
         <!-- img -->
@@ -373,6 +375,83 @@
                         <span class="pt-3  fw-bold">Crash Bandicoot4: it's About Time</span>
                     </div>
             </div>
+        </section>
+
+        <!-- PS4 -->
+        <section class="PS4 sm-t">
+            <div class="container">
+                <div class="row justify-content-center">
+                    <div class="col-12 col-md-6 text-center">
+                        <h1 class="title">Esplora PlayStation®4</h1>
+                        <span class="text-secondary fs-4">Giochi incredibili e intrattenimento senza fine. Non c'è mai stato un momento migliore per giocare sulla tua PS4.</span>
+                    </div>
+                </div>
+            </div>
+            <!-- LIST -->
+            <section class="list-PS4 mt-4">
+
+                <section class="conatiner">
+                    <div class="row">
+                        <div class="col-12  col-md-4  pt-5">
+                            <div class="box-PS4">
+                                <img src="./img/ps4-slim-homepage-image-block.jpg" alt="">
+                            </div>
+                            <div class="row">
+                                <div class="col-12">
+                                    <h1 class="title">
+                                        PlayStation 4
+                                    </h1>
+                                    <h3 class="text-secondary">
+                                        Giochi incredibili su PS4, con 1 TB di spazio di archiviazione
+                                    </h3>
+                                    <button class="btn btn-primary btn-stile mt-3">
+                                        Scopri di piú
+                                    </button>
+                                </div>
+                            </div>
+                        </div>
+
+                        <div class="col-12  col-md-4 pt-5">
+                            <div class="box-PS4">
+                                <img src="./img/double11-202010-tw-psvr.jpg" alt="">
+                            </div>
+                            <div class="row">
+                                <div class="col-12">
+                                    <h1 class="title">
+                                        PlayStation 4
+                                    </h1>
+                                    <h3 class="text-secondary">
+                                        Giochi incredibili su PS4, con 1 TB di spazio di archiviazione
+                                    </h3>
+                                    <button class="btn btn-primary btn-stile mt-3">
+                                        Scopri di piú
+                                    </button>
+                                </div>
+                            </div>
+                        </div>
+
+                        <div class="col-12  col-md-4 pt-5">
+                            <div class="box-PS4">
+                                <img src="./img/dualshock-4-listing-thumb.jpg" alt="">
+                            </div>
+                            <div class="row">
+                                <div class="col-12">
+                                    <h1 class="title">
+                                        PlayStation 4
+                                    </h1>
+                                    <h3 class="text-secondary">
+                                        Giochi incredibili su PS4, con 1 TB di spazio di archiviazione
+                                    </h3>
+                                    <button class="btn btn-primary btn-stile mt-3">
+                                        Scopri di piú
+                                    </button>
+                                </div>
+                            </div>
+                        </div>
+
+                    </div>
+                </Section>
+            </section>
         </section>
     </main>
     <!-- FOOTER -->
