fix ps4 section

--- a/index.html
+++ b/index.html
@@ -392,21 +392,24 @@
 
                 <section class="conatiner">
                     <div class="row">
+
                         <div class="col-12  col-md-4  pt-5">
                             <div class="box-PS4">
                                 <img src="./img/ps4-slim-homepage-image-block.jpg" alt="">
                             </div>
-                            <div class="row">
-                                <div class="col-12">
-                                    <h1 class="title">
-                                        PlayStation 4
-                                    </h1>
-                                    <h3 class="text-secondary">
-                                        Giochi incredibili su PS4, con 1 TB di spazio di archiviazione
-                                    </h3>
-                                    <button class="btn btn-primary btn-stile mt-3">
-                                        Scopri di piú
-                                    </button>
+                            <div class="container">
+                                <div class="row">
+                                    <div class="col-12">
+                                        <h1 class="title">
+                                            PlayStation 4
+                                        </h1>
+                                        <h3 class="text-secondary">
+                                            Giochi incredibili su PS4, con 1 TB di spazio di archiviazione
+                                        </h3>
+                                        <button class="btn btn-primary btn-stile mt-3">
+                                            Scopri di piú
+                                        </button>
+                                    </div>
                                 </div>
                             </div>
                         </div>
@@ -415,17 +418,20 @@
                             <div class="box-PS4">
                                 <img src="./img/double11-202010-tw-psvr.jpg" alt="">
                             </div>
-                            <div class="row">
-                                <div class="col-12">
-                                    <h1 class="title">
-                                        PlayStation 4
-                                    </h1>
-                                    <h3 class="text-secondary">
-                                        Giochi incredibili su PS4, con 1 TB di spazio di archiviazione
-                                    </h3>
-                                    <button class="btn btn-primary btn-stile mt-3">
-                                        Scopri di piú
-                                    </button>
+
+                            <div class="container">
+                                <div class="row">
+                                    <div class="col-12">
+                                        <h1 class="title">
+                                            PlayStation 4
+                                        </h1>
+                                        <h3 class="text-secondary">
+                                            Giochi incredibili su PS4, con 1 TB di spazio di archiviazione
+                                        </h3>
+                                        <button class="btn btn-primary btn-stile mt-3">
+                                            Scopri di piú
+                                        </button>
+                                    </div>
                                 </div>
                             </div>
                         </div>
@@ -434,17 +440,20 @@
                             <div class="box-PS4">
                                 <img src="./img/dualshock-4-listing-thumb.jpg" alt="">
                             </div>
-                            <div class="row">
-                                <div class="col-12">
-                                    <h1 class="title">
-                                        PlayStation 4
-                                    </h1>
-                                    <h3 class="text-secondary">
-                                        Giochi incredibili su PS4, con 1 TB di spazio di archiviazione
-                                    </h3>
-                                    <button class="btn btn-primary btn-stile mt-3">
-                                        Scopri di piú
-                                    </button>
+
+                            <div class="container">
+                                <div class="row">
+                                    <div class="col-12">
+                                        <h1 class="title">
+                                            PlayStation 4
+                                        </h1>
+                                        <h3 class="text-secondary">
+                                            Giochi incredibili su PS4, con 1 TB di spazio di archiviazione
+                                        </h3>
+                                        <button class="btn btn-primary btn-stile mt-3">
+                                            Scopri di piú
+                                        </button>
+                                    </div>
                                 </div>
                             </div>
                         </div>
