--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
                                 Accedi
                             </button>
                         </li>
-                        <li class="nav-item d-flex pd-r align-self-center">
+                        <li class="nav-item d-flex  align-self-center">
                             <img class="icon-lens" src="./img/lens.svg" alt="">
                         </li>
                      </ul>
@@ -286,82 +286,82 @@
 
         <!-- new-games -->
         <section class="new-games  text-white">
-            <div class="container">
+            <div class="container pb-5">
                 <h1 class="title pt-5 mb-2">Nuove uscite</h1>
                 <h4>Giochi incredibili per PS4 e PS5 disponibili ora</h4>
 
                 <div class="row">
-                    <div class="col-6 col-md-4 col-lg-2 pt-4">
+                    <div class="col-6 col-md-4 col-lg-2 pt-4 ">
                         <div class="box-new-games by">
                             <img src="./img/tony-hawks-pro-skater-1-2-store-art.jpg" alt="">
                         </div>
                         <span class="pt-3 fw-bold">Tony Hawk's Pro Skater 1 + 2</span>
                     </div>
 
-                    <div class="col-6 col-md-4 col-lg-2 pt-4">
+                    <div class="col-6 col-md-4 col-lg-2 pt-4 ">
                         <div class="box-new-games by">
                             <img src="./img/crash-bandicoot-4-its-about-time-store-art.jpg" alt="">
                         </div>
                         <span class="pt-3  fw-bold">Crash Bandicoot4: it's About Time</span>
                     </div>
 
-                    <div class="col-6 col-md-4 col-lg-2 pt-4">
+                    <div class="col-6 col-md-4 col-lg-2 pt-4 ">
                         <div class="box-new-games by">
                             <img src="./img/tony-hawks-pro-skater-1-2-store-art.jpg" alt="">
                         </div>
                         <span class="pt-3 fw-bold ">Tony Hawk's Pro Skater 1 + 2</span>
                     </div>
 
-                    <div class="col-6 col-md-4 col-lg-2 pt-4">
+                    <div class="col-6 col-md-4 col-lg-2 pt-4 ">
                         <div class="box-new-games by">
                             <img src="./img/crash-bandicoot-4-its-about-time-store-art.jpg" alt="">
                         </div>
                         <span class="pt-3 fw-bold ">Crash Bandicoot4: it's About Time</span>
                     </div>
 
-                    <div class="col-6 col-md-4 col-lg-2 pt-4">
+                    <div class="col-6 col-md-4 col-lg-2 pt-4 ">
                         <div class="box-new-games by">
                             <img src="./img/tony-hawks-pro-skater-1-2-store-art.jpg" alt="">
                         </div>
                         <span class="pt-3 fw-bold">Tony Hawk's Pro Skater 1 + 2</span>
                     </div>
 
-                    <div class="col-6 col-md-4 col-lg-2 pt-4">
+                    <div class="col-6 col-md-4 col-lg-2 pt-4 ">
                         <div class="box-new-games by">
                             <img src="./img/crash-bandicoot-4-its-about-time-store-art.jpg" alt="">
                         </div>
                         <span class="pt-3  fw-bold">Crash Bandicoot4: it's About Time</span>
                     </div>
 
-                    <div class="col-6 col-md-4 col-lg-2 pt-4">
+                    <div class="col-6 col-md-4 col-lg-2 pt-4 ">
                         <div class="box-new-games by">
                             <img src="./img/tony-hawks-pro-skater-1-2-store-art.jpg" alt="">
                         </div>
                         <span class="pt-3 fw-bold">Tony Hawk's Pro Skater 1 + 2</span>
                     </div>
 
-                    <div class="col-6 col-md-4 col-lg-2 pt-4">
+                    <div class="col-6 col-md-4 col-lg-2 pt-4 ">
                         <div class="box-new-games by">
                             <img src="./img/crash-bandicoot-4-its-about-time-store-art.jpg" alt="">
                         </div>
                         <span class="pt-3  fw-bold">Crash Bandicoot4: it's About Time</span>
                     </div>
 
-                    <div class="col-6 col-md-4 col-lg-2 pt-4">
+                    <div class="col-6 col-md-4 col-lg-2 pt-4 ">
                         <div class="box-new-games by">
                             <img src="./img/tony-hawks-pro-skater-1-2-store-art.jpg" alt="">
                         </div>
                         <span class="pt-3 fw-bold ">Tony Hawk's Pro Skater 1 + 2</span>
                     </div>
 
-                    <div class="col-6 col-md-4 col-lg-2 pt-4">
+                    <div class="col-6 col-md-4 col-lg-2 pt-4 ">
                         <div class="box-new-games by">
                             <img src="./img/crash-bandicoot-4-its-about-time-store-art.jpg" alt="">
                         </div>
                         <span class="pt-3 fw-bold ">Crash Bandicoot4: it's About Time</span>
                     </div>
 
-                    <div class="col-6 col-md-4 col-lg-2 pt-4">
+                    <div class="col-6 col-md-4 col-lg-2 pt-4 ">
                         <div class="box-new-games by">
                             <img src="./img/tony-hawks-pro-skater-1-2-store-art.jpg" alt="">
                         </div>
@@ -379,9 +379,10 @@
 
         <!-- PS4 -->
         <section class="PS4 sm-t">
+
             <div class="container">
                 <div class="row justify-content-center">
-                    <div class="col-12 col-md-6 text-center">
+                    <div class="col-12 col-md-8 text-center">
                         <h1 class="title">Esplora PlayStation®4</h1>
                         <span class="text-secondary fs-4">Giochi incredibili e intrattenimento senza fine. Non c'è mai stato un momento migliore per giocare sulla tua PS4.</span>
                     </div>
@@ -390,10 +391,10 @@
             <!-- LIST -->
             <section class="list-PS4 mt-4">
 
-                <section class="conatiner">
-                    <div class="row">
+                <div class="conatiner">
+                    <div class="row offset-lg-3">
 
-                        <div class="col-12  col-md-4  pt-5">
+                        <div class="col-12  col-md-4 col-lg-3 pt-5">
                             <div class="box-PS4">
                                 <img src="./img/ps4-slim-homepage-image-block.jpg" alt="">
                             </div>
@@ -414,7 +415,7 @@
                             </div>
                         </div>
 
-                        <div class="col-12  col-md-4 pt-5">
+                        <div class="col-12  col-md-4 col-lg-3 pt-5">
                             <div class="box-PS4">
                                 <img src="./img/double11-202010-tw-psvr.jpg" alt="">
                             </div>
@@ -436,7 +437,7 @@
                             </div>
                         </div>
 
-                        <div class="col-12  col-md-4 pt-5">
+                        <div class="col-12  col-md-4 col-lg-3 pt-5">
                             <div class="box-PS4">
                                 <img src="./img/dualshock-4-listing-thumb.jpg" alt="">
                             </div>
@@ -459,9 +460,69 @@
                         </div>
 
                     </div>
-                </Section>
+                </div>
+
             </section>
+
         </section>
+
+        <!-- PLUS -->
+        <section class="plus-section sm-t pb-4">
+            <div class="container">
+                <div class="row">
+                    <div class="col-12 col-lg-6">
+                        <div class="box-plus">
+                            <img src="./img/ps-plus-logo.png" alt="">
+                        </div>
+                        <p class="text-black m-4">
+                            Migliora la tua eseperienza PlayStation con l'acceso a multigiocatore online, giochi mensili, sconti esclusivie molto altro ancora
+                        </p>
+                        <button class="btn btn-outline-primary btn-stile" >
+                            Esplora PlayStation Plus
+                        </button>
+                    </div>
+                    <div class="d-none d-lg-block col-lg-5">
+                        <div class="container-banner-plus">
+                            <img src="./img/ps-plus-april-monthly-games-featured-image-block.png" alt="">
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
+
+        <!-- SALE -->
+        <section class="sale mt-4">
+            <div class="container">
+                <div class="row text-center">
+                    <div class="col-12  ">
+                        <h1 class="title">Nuovi sconti sul PlayStation Store</h1>
+                        <h3 class="text-secondary fs-4 mt-3">
+                            Sconti pazzeschi, collezioni curate e saldi stagionali su PS5, PS4 e PS VR, tutti in un unico posto
+                        </h3>
+                    </div>
+                </div>
+                <div class="row">
+                    <div class="col-12 col-md-4">
+                        <div class="box-sale pt-5">
+                            <img src="./img/playstation-store-games-under-20-spotlight.jpg" alt="">
+                        </div>
+                    </div>
+
+                    <div class="col-12 col-md-4">
+                        <div class="box-sale pt-5">
+                            <img src="./img/playstation-store-golden-week-sale-spotlight.jpg" alt="">
+                        </div>
+                    </div>
+
+                    <div class="col-12 col-md-4">
+                        <div class="box-sale  pt-5">
+                            <img src="./img/playstation-store-free-to-play-spotlight.png" alt="">
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
+
     </main>
     <!-- FOOTER -->
 </body>
