--- a/index.html
+++ b/index.html
@@ -523,6 +523,30 @@
             </div>
         </section>
 
+        <!-- Playstation Now -->
+        <section class="playstation-now mt-5 pb-4">
+            <div class="container text-white">
+                <div class="row">
+                    <div class="col-12 col-md-6">
+                        <div class="box-plus pt-3">
+                            <img src="./img/ps-now-logo-two-column.png" alt="">
+                        </div>
+                        <P class="pt-3 pb-4">
+                            Ottieni l'accesso immediato a una vastissima raccolta di oltre 800 giochi per PS4, PS3 e PS2 su PS4 o PC Windows, con nuovi titoli aggiunti ogni mese.
+                        </P>
+                        <button class="btn btn-stile btn-light">
+                                Esplora Playstation Now
+                        </button>
+                    </div>
+                    <div class="d-none d-md-block col-md-6">
+                        <div class="container-banner-plus">
+                            <img src="./img/ps-now-april-featured-image-block.png" alt="">
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
+
     </main>
     <!-- FOOTER -->
 </body>
