add fix h- container

--- a/index.html
+++ b/index.html
@@ -481,7 +481,7 @@
                             Esplora PlayStation Plus
                         </button>
                     </div>
-                    <div class="d-none d-lg-block col-lg-5">
+                    <div class="d-none d-md-block col-md-6">
                         <div class="container-banner-plus">
                             <img src="./img/ps-plus-april-monthly-games-featured-image-block.png" alt="">
                         </div>
