--- a/index.html
+++ b/index.html
@@ -547,6 +547,35 @@
             </div>
         </section>
 
+        <!-- social -->
+        <section class="social mt-5 pb-4">
+            <div class="container">
+                <h1 class="title text-center ">Seguici sui social</h1>
+                <ul class="row">
+                    <li class="col-6 pt-4">
+                        <div class="box-PS4">
+                            <img src="./img/facebook.jpg" alt="">
+                        </div>
+                    </li>
+                    <li class="col-6 pt-4">
+                        <div class="box-PS4">
+                            <img src="./img/twitter.jpg" alt="">
+                        </div>
+                    </li>
+                    <li class="col-6 pt-4">
+                        <div class="box-PS4">
+                            <img src="./img/instagram.jpg" alt="">
+                        </div>
+                    </li>
+                    <li class="col-6 pt-4">
+                        <div class="box-PS4">
+                            <img src="./img/youtube.png" alt="">
+                        </div>
+                    </li>
+                </ul>
+            </div>
+        </section>
+
     </main>
     <!-- FOOTER -->
 </body>
