--- a/index.html
+++ b/index.html
@@ -481,7 +481,7 @@
                             Esplora PlayStation Plus
                         </button>
                     </div>
-                    <div class="d-none d-md-block col-md-6">
+                    <div class="d-none d-lg-block col-md-6">
                         <div class="container-banner-plus">
                             <img src="./img/ps-plus-april-monthly-games-featured-image-block.png" alt="">
                         </div>
@@ -491,7 +491,7 @@
         </section>
 
         <!-- SALE -->
-        <section class="sale mt-4">
+        <section class="sale sm-t   ">
             <div class="container">
                 <div class="row text-center">
                     <div class="col-12  ">
@@ -549,25 +549,25 @@
 
         <!-- social -->
         <section class="social mt-5 pb-4">
-            <div class="container">
+            <div class="container-social">
                 <h1 class="title text-center ">Seguici sui social</h1>
                 <ul class="row">
-                    <li class="col-6 pt-4">
+                    <li class="col-6 col-md  pt-3">
                         <div class="box-PS4">
                             <img src="./img/facebook.jpg" alt="">
                         </div>
                     </li>
-                    <li class="col-6 pt-4">
+                    <li class="col-6 col-md  pt-3">
                         <div class="box-PS4">
                             <img src="./img/twitter.jpg" alt="">
                         </div>
                     </li>
-                    <li class="col-6 pt-4">
+                    <li class="col-6 col-md  pt-3">
                         <div class="box-PS4">
                             <img src="./img/instagram.jpg" alt="">
                         </div>
                     </li>
-                    <li class="col-6 pt-4">
+                    <li class="col-6 col-md  pt-3">
                         <div class="box-PS4">
                             <img src="./img/youtube.png" alt="">
                         </div>
@@ -577,6 +577,97 @@
         </section>
 
     </main>
+
     <!-- FOOTER -->
+    <footer>
+        <!-- footer-top -->
+        <section class="container">
+            <ul class="row">
+                <li class="col-12  col-lg-6 pt-3">
+                    <div class="footer-brand">
+                        <img  src="./img/ps-footer.svg" alt="">
+                    </div>
+                    <div class=" language d-inline-block mrg-r">
+                        <img  src="./img/language-globe.svg" alt="">
+                    </div>
+                    <span class="text-white fs-4">
+                        county/region Italy
+                    </span>
+                </li>
+
+                <li class="col-12  col-lg-6 pt-5">
+                    <div class="container p-0">
+                        <ul class="row">
+                            <div class="col-12 col-md-4">
+                                <li>
+                                    <a href="#">Link footer n</a>
+                                </li>
+                                <li>
+                                    <a href="#">Link footer n</a>
+                                </li>
+                                <li>
+                                    <a href="#">Link footer n</a>
+                                </li>
+                                <li>
+                                    <a href="#">Link footer n</a>
+                                </li>
+                            </div>
+
+                            <div class="col-12 col-md-4">
+                                <li>
+                                    <a href="#">Link footer n</a>
+                                </li>
+                                <li>
+                                    <a href="#">Link footer n</a>
+                                </li>
+                                <li>
+                                    <a href="#">Link footer n</a>
+                                </li>
+                                <li>
+                                    <a href="#">Link footer n</a>
+                                </li>
+                                <li>
+                                    <a href="#">Link footer n</a>
+                                </li>
+                                <li>
+                                    <a href="#">Link footer n</a>
+                                </li>
+                            </div>
+
+                            <div class="col-12 col-md-4">
+                                <li>
+                                    <a href="#">Link footer n</a>
+                                </li>
+                                <li>
+                                    <a href="#">Link footer n</a>
+                                </li>
+                                <li>
+                                    <a href="#">Link footer n</a>
+                                </li>
+                                <li>
+                                    <a href="#">Link footer n</a>
+                                </li>
+                            </div>
+                        </ul>
+                    </div>
+                </li>
+            </ul>
+
+        </section>
+
+        <!-- footer-down -->
+        <section class="container mt-5">
+            <div class="row">
+                <div class="col-12">
+                    <div class="box-copyright">
+                        <img src="./img/sie-logo.svg" alt="">
+                    </div>
+                    <p class="text-white">
+                        Website ©2021 Sony Interactive Entertainment Europe Limited. Tutti i contenuti, nomi dei giochi, nomi commerciali e/o di abbigliamento, marchi registrati, grafica e immagini associati sono marchi registrati e/o materiale protetto da copyright dei rispettivi proprietari. Tutti i diritti riservati. Maggiori info
+                    </p>
+                </div>
+            </div>
+        </section>
+    </footer>
 </body>
 </html>
