--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
                 <img src="./img/sony_logo.svg" alt="">
             </div>
         </div>
+
         <!-- navbar -->
         <nav class="navbar navabar-stile navbar-expand-lg navbar-light bg-white">
             <div class="container-fluid">
@@ -38,9 +39,10 @@
 
                     <li class="nav-item d-flex">
                         <a class="nav-link nav-a-stile" aria-current="page" href="#">Giochi
-                            <span class="container-arrow">
-                                <img class="arrow-icon align-self-center" src="./img/chevron-down-solid.svg" alt="">
-                            </span>
+                        <span class="container-arrow align-items-center">
+                            <img class="arrow-icon align-self-center" src="./img/chevron-down-solid.svg" alt="">
+                            <img class=" arrow-icon2 align-self-center" src="./img/chevron-down-solid-hover.svg" alt="">
+                        </span>
                         </a>
                     </li>
 
@@ -48,6 +50,7 @@
                         <a class="nav-link nav-a-stile" href="#">Hardwer
                             <span class="container-arrow">
                                 <img class="arrow-icon align-self-center" src="./img/chevron-down-solid.svg" alt="">
+                                <img class=" arrow-icon2 align-self-center" src="./img/chevron-down-solid-hover.svg" alt="">
                             </span>
                         </a>
                     </li>
@@ -56,6 +59,7 @@
                         <a class="nav-link nav-a-stile ">Servizi
                             <span class="container-arrow">
                                 <img class="arrow-icon align-self-center" src="./img/chevron-down-solid.svg" alt="">
+                                <img class=" arrow-icon2 align-self-center" src="./img/chevron-down-solid-hover.svg" alt="">
                             </span>
                         </a>
                     </li>
@@ -64,6 +68,7 @@
                         <a class="nav-link nav-a-stile">Novitá
                             <span class="container-arrow">
                                 <img class="arrow-icon align-self-center" src="./img/chevron-down-solid.svg" alt="">
+                                <img class=" arrow-icon2 align-self-center" src="./img/chevron-down-solid-hover.svg" alt="">
                             </span>
                         </a>
                     </li>
@@ -72,6 +77,7 @@
                         <a class="nav-link nav-a-stile">Fai acquisti
                             <span class="container-arrow">
                                 <img class="arrow-icon align-self-center" src="./img/chevron-down-solid.svg" alt="">
+                                <img class=" arrow-icon2 align-self-center" src="./img/chevron-down-solid-hover.svg" alt="">
                             </span>
                         </a>
                     </li>
@@ -80,6 +86,7 @@
                         <a class="nav-link nav-a-stile">Supporto
                             <span class="container-arrow">
                                 <img class="arrow-icon align-self-center" src="./img/chevron-down-solid.svg" alt="">
+                                <img class=" arrow-icon2 align-self-center" src="./img/chevron-down-solid-hover.svg" alt="">
                             </span>
                         </a>
                     </li>
@@ -144,7 +151,7 @@
             <div class="container">
                 <div class="row">
                     <div class="col-6 col-md-4 col-lg-2 pt-4">
-                        <div class="box by">
+                        <div class="box">
                             <img src="./img/returnal-listing-thumb-01-ps5.jpg" alt="">
                         </div>
                     </div>
